[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository = "https://github.com/servo/mozjs/"
version = "0.15.2"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2021"

[lib]
doctest = false

[features]
default = ["jit", "libz-sys", "intl"]
debugmozjs = ["mozjs_sys/debugmozjs"]
profilemozjs = ["mozjs_sys/profilemozjs"]
jit = ['mozjs_sys/jit']
jitspew = ["mozjs_sys/jitspew"]
libz-sys = ["mozjs_sys/libz-sys"]
libz-rs = ["mozjs_sys/libz-rs"]
intl = ["mozjs_sys/intl"]
crown = ["mozjs_sys/crown"]


[dependencies]
encoding_rs = "0.8.35"
libc = "0.2"
log = "0.4"
# When doing non-version changes also update ../mozjs-sys/etc/sm-security-bump.py
mozjs_sys = { version = "=0.140.7-0", path = "../mozjs-sys" }
num-traits = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.6", default-features = false, features = [
    "html_reports",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.6"

[build-dependencies]
cc = "1"
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }


[[bench]]
name = "latin1_string_conversion"
harness = false
